# microeeprommanager

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup_venv.ps1  setup_venv.sh
doc/: Configuration.md  Interfaces-overall.drawio  Operation.md
example/Microchip/: README.md  main.c
example/Microchip/Applications/: AppA.c  AppB.c  AppC.c  AppD.c  README.md
example/Microchip/CRC/: CRC.c  CRC.h
example/Microchip/EEPROM_Driver_PIC16F/: EEPROM_Driver_PIC16F.c  EEPROM_Driver_PIC16F.h
example/Microchip/MEEM_Config/: MEEM_Checksum.c  MEEM_ChecksumProvider.c  MEEM_EEAIF.c  MEEM_InitCallbacks.c  MEEM_UserCallbacks.c  eeprom_datamodel_example.json  platform_settings_xc8.json
example/Microchip/mEEM-demo.X/: build_project.ps1  pre_build_actions.ps1
example/Microchip/mEEM-demo.X/nbproject/: configurations.xml  project.xml
src/: CMakeLists.txt
src/core/: MEEM.c  MEEM_BlockManagement_BackupCopy.c  MEEM_BlockManagement_Basic.c  MEEM_BlockManagement_Common.c  MEEM_BlockManagement_MultiProfile.c  MEEM_BlockManagement_WearLeveling.c  MEEM_Internal.h  MEEM_Linkage.h
src/provided_interface/: MEEM.h
src/required_interface/: MEEM_Checksum.h  MEEM_ChecksumProvider.h  MEEM_EEAIF.h  MEEM_InitCallbacks.h  MEEM_UserCallbacks.h
test/: CMakeLists.txt  test_backup_copy_blocks.cpp  test_base.hpp  test_basic_blocks.cpp  test_common.cpp  test_eep_sim.cpp  test_multi_profile_blocks.cpp  test_wear_leveling_blocks.cpp
test/eeprom_simulator/: eeprom_simulator.hpp
test/meem_config/: CMakeLists.txt  MEEM_Checksum.cpp  MEEM_ChecksumProvider.cpp  MEEM_EEAIF.cpp  MEEM_InitCallbacks.cpp  MEEM_UserCallbacks.cpp  checksum_params.json  eeprom_datamodel.json  platform_settings_gcc.json  platform_settings_msvc.json
test/mocks/: MEEM_UserCallbacks_Mock.hpp
tools/common/: checksum_algo.py  data_model.py  platform_settings.py  utils.py
tools/configurator/: README.md  app.js  configurator.html  styles.css
tools/eeprom_image_gen/: README.md  eeprom_image_gen.py
tools/eeprom_inspector/: README.md  eeprom_inspector.py  report_builder.py  report_template.html  view_types.py
tools/meem_config_gen/: README.md  generator_base.py  generator_meem.py  meem_config_gen.py  validator.py
